--- a/ramdisk/init.qcom.rc
+++ b/ramdisk/init.qcom.rc
@@ -34,6 +34,10 @@ on post-fs-data
     mkdir /data/misc/dhcp 0770 dhcp dhcp
     chown dhcp dhcp /data/misc/dhcp
 
+    # Create directories for wiper services
+    mkdir /data/wpstiles/ 0755 shell
+    mkdir /data/wiper 0755 gps qcom_oncrpc
+
     # provide the access to hostapd.conf only to root and group
     chmod 0660 /data/hostapd/hostapd.conf
 
@@ -96,8 +100,11 @@ service qmuxd /system/bin/qmuxd
 service netmgrd /system/bin/netmgrd
     class main
 
-service thermald /system/bin/thermald
-    class main
+service thermald /system/bin/thermald -c /system/etc/thermald.conf
+   class late_start
+   user root
+   group root
+   disabled
 
 service mpdecision /system/bin/mpdecision --no_sleep --avg_comp
     class main
