use rild at socket 1

--- a/ramdisk/init.qcom.rc
+++ b/ramdisk/init.qcom.rc
@@ -188,3 +188,10 @@ service iprenew_bnep0 /system/bin/dhcpcd -n
     class main
     disabled
     oneshot
+
+service ril-daemon1 /system/bin/rild -c 1
+     class main
+     socket rild1 stream 660 root radio
+     socket rild-debug1 stream 660 radio system
+     user root
+     group radio cache inet misc audio sdcard_r sdcard_rw qcom_diag log qcom_oncrpc
