--- a/ramdisk/init.qcom.rc
+++ b/ramdisk/init.qcom.rc
@@ -205,3 +205,9 @@ service secril-daemon /system/bin/sec-ril
 class main
 user root
 group radio cache inet misc audio sdcard_rw diag log
+
+# SISO-ANDR-PERF :: START Changing governor to interactive and scheduler to cfq after boot complete
+on property:sys.boot_completed=1
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor	ondemand
+    write /sys/block/mmcblk0/queue/scheduler cfq
+# SISO-ANDR-PERF :: END HERE
