--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -129,6 +129,12 @@ service p2p_supplicant /system/bin/logwrapper /system/bin/wpa_supplicant \
     disabled
     oneshot
 
+service thermald /system/bin/thermald -c /system/etc/thermald.conf
+    class main
+
+service mpdecision /system/bin/mpdecision --no_sleep --avg_comp
+    class main
+
 service wpa_supplicant /system/bin/logwrapper /system/bin/wpa_supplicant \
     -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf \
     -e/data/misc/wifi/entropy.bin
