--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -1,11 +1,9 @@
-import init.${ro.hardware}.usb.rc
+import init.qcom.usb.rc
 
 on early-init
     mount debugfs debugfs /sys/kernel/debug
 
 on init
-    write /proc/sys/kernel/randomize_va_space 1
-
     export EXTERNAL_STORAGE /storage/sdcard0
     export SECONDARY_STORAGE /storage/sdcard1
 
@@ -23,105 +21,94 @@ on init
     symlink /storage/usbdisk0 /mnt/usbdisk
     symlink /storage/usbdisk0 /usbdisk
 
+    # create directory for ril data
+    mkdir /data/misc/radio 0775 radio radio
+    chmod 0775 /data/misc/radio
+    mkdir /data/misc/radio/hatp 0775 radio system
+
 on fs
-    ## Mount partitions
+    mkdir /efs 0771 radio system
+    mkdir /persist 0771 system system
+    mkdir /preload 0771 system system
+
     mount_all /fstab.qcom
+    setprop ro.crypto.fuse_sdcard true
+
+on post-fs-data
+    # we will remap this as /storage/sdcard0 with the sdcard fuse tool
+    mkdir /data/media 0770 media_rw media_rw
+    chown media_rw media_rw /data/media
+
+    mkdir /data/misc/wifi 0770 wifi wifi
+    mkdir /data/misc/wifi/sockets 0770 wifi wifi
+    mkdir /data/misc/dhcp 0770 dhcp dhcp
+    chown dhcp dhcp /data/misc/dhcp
+
+    # Create directories for wiper services
+    mkdir /data/wpstiles/ 0755 shell
+    mkdir /data/wiper 0755 gps qcom_oncrpc
+
+    # provide the access to hostapd.conf only to root and group
+    chmod 0660 /data/hostapd/hostapd.conf
+
+    # set indication (checked by vold) that we have finished this action
+    setprop vold.post_fs_data_done 1
 
 on boot
-    ## Setup Bluetooth
-    chown bluetooth bluetooth /sys/module/bluetooth_power/parameters/power
+    # bluetooth and rfkill
     chown bluetooth bluetooth /sys/class/rfkill/rfkill0/type
     chown bluetooth bluetooth /sys/class/rfkill/rfkill0/state
-    chown bluetooth bluetooth /proc/bluetooth/sleep/proto
-    chown bluetooth bluetooth /proc/bcm/sleep/proto
-    chown system system /sys/module/sco/parameters/disable_esco
-    chown bluetooth bluetooth /sys/module/hci_smd/parameters/hcismd_set
-    chmod 0660 /sys/module/bluetooth_power/parameters/power
-    chmod 0660 /sys/module/hci_smd/parameters/hcismd_set
     chmod 0660 /sys/class/rfkill/rfkill0/state
-    chmod 0660 /proc/bluetooth/sleep/proto
-    chmod 0660 /proc/bcm/sleep/proto
     chown bluetooth bluetooth /dev/ttyHS0
     chmod 0660 /dev/ttyHS0
     chown bluetooth bluetooth /sys/devices/platform/msm_serial_hs.0/clock
     chmod 0660 /sys/devices/platform/msm_serial_hs.0/clock
 
-    ## Setup Wi-Fi
-    mkdir /data/misc/wifi 0770 wifi wifi
-    mkdir /data/misc/wifi/sockets 0770 wifi wifi
-    mkdir /data/misc/wifi/wpa_supplicant 0775 wifi wifi
-    mkdir /data/misc/dhcp 0770 dhcp dhcp
-    chown dhcp dhcp /data/misc/dhcp
+    # create QMUX deamon socket area
+    mkdir /dev/socket/qmux_radio 0770 radio radio
+    chmod 2770 /dev/socket/qmux_radio
+    mkdir /dev/socket/qmux_audio 0770 media audio
+    chmod 2770 /dev/socket/qmux_audio
+    mkdir /dev/socket/qmux_bluetooth 0770 bluetooth bluetooth
+    chmod 2770 /dev/socket/qmux_bluetooth
+    mkdir /dev/socket/qmux_gps 0770 gps gps
+    chmod 2770 /dev/socket/qmux_gps
 
-    ## Lights
-    chown system system /sys/class/misc/backlightnotification/enabled
-    chown system system /sys/class/leds/lcd-backlight/brightness
+    # allow QMUX daemon to set open timeout
+    chown radio radio /sys/devices/virtual/smdpkt/smdcntl0/open_timeout
+
+    # lights and torch
     chown system system /sys/class/sec/sec_touchkey/brightness
-    chown system camera /sys/class/camera/rear/rear_flash
-    chmod 0660 /sys/class/camera/rear/rear_flash
-    chmod 0660 /sys/class/leds/lcd-backlight/brightness
-    chmod 0660 /sys/class/sec/sec_touchkey/brightness
+    chmod 0666 /sys/class/camera/rear/rear_flash
 
-    ## Sensors
-    chown system system /system/etc/sensors.dat
-    chown system system /system/etc/calib.dat
-    chown system system /system/etc/param.dat
-    chmod 0666 /system/etc/sensors.dat
-    chmod 0666 /system/etc/calib.dat
-    chmod 0666 /system/etc/param.dat
-    chown root system /dev/alps_io
-    chmod 0660 /dev/alps_io
+on charger
+    # enable powersave governor when charging
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "powersave"
 
-    ## Chown polling nodes as needed from UI running on system server
-    chmod 0664 /sys/devices/platform/msm_sdcc.1/polling
-    chmod 0664 /sys/devices/platform/msm_sdcc.2/polling
-    chmod 0664 /sys/devices/platform/msm_sdcc.3/polling
-    chmod 0664 /sys/devices/platform/msm_sdcc.4/polling
-    chown system system /sys/devices/platform/msm_sdcc.1/polling
-    chown system system /sys/devices/platform/msm_sdcc.2/polling
-    chown system system /sys/devices/platform/msm_sdcc.3/polling
-    chown system system /sys/devices/platform/msm_sdcc.4/polling
-	
-    ## TelephonyManager.java requires this
-    chmod 0644 /proc/cmdline
-
-on post-fs-data
-    mkdir /data/misc/bluetooth 0770 bluetooth bluetooth
-
-    ## Create log system
-    mkdir /data/log 0775 system log
-
-    mkdir /data/misc/radio 0775 radio system
-    mkdir /data/radio 0770 radio radio
-
-    setprop vold.post_fs_data_done 1
-
-service rmt_storage /system/bin/rmt_storage /dev/block/mmcblk0p10 /dev/block/mmcblk0p11
-    user root
-    disabled
-
-on property:ro.boot.emmc=true
-    start rmt_storage
-
-service abtfilt /system/bin/abtfilt -d -z -n -v -s -a -q
-    class main
-    user bluetooth
-    group system bluetooth net_bt_admin inet net_raw
-    disabled
-    oneshot 
-
-service p2p_supplicant /system/bin/logwrapper /system/bin/wpa_supplicant \
-    -ip2p0 -Dnl80211 -c/data/misc/wifi/p2p_supplicant.conf -N \
-    -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf \
-    -e/data/misc/wifi/entropy.bin -puse_p2p_group_interface=1
-    #   we will start as root and wpa_supplicant will switch to user wifi
-    #   after setting up the capabilities required for WEXT
-    #   user wifi
-    #   group wifi inet keystore
-    class main
-    socket wpa_wlan0 dgram 660 wifi wifi
-    disabled
+service playlpm /system/bin/playlpm
+    class charger
     oneshot
+
+service lpmkey /system/bin/lpmkey
+    class charger
+    oneshot
+
+# create virtual SD card at /storage/sdcard0, based on the /data/media directory
+# daemon will drop to user/group system/media_rw after initializing
+# underlying files in /data/media will be created with user and group media_rw (1023)
+service sdcard /system/bin/sdcard /data/media 1023 1023
+    class late_start
+
+service rmt_storage /system/bin/rmt_storage
+    class main
+
+service qmuxd /system/bin/qmuxd
+    class main
+    user radio
+    group radio audio bluetooth gps
+
+service netmgrd /system/bin/netmgrd
+    class main
 
 service thermald /system/bin/thermald -c /system/etc/thermald.conf
     class main
@@ -129,24 +116,70 @@ service thermald /system/bin/thermald -c /system/etc/thermald.conf
 service mpdecision /system/bin/mpdecision --no_sleep --avg_comp
     class main
 
+service sensord /system/bin/sensord
+    class main
+#   we run sensord as root for convenience
+#   user system
+#   group system
+
+service qcamerasvr /system/bin/mm-qcamera-daemon
+    class late_start
+    user camera
+    group camera system inet audio
+
+service gpu_dcvsd /system/bin/gpu_dcvsd
+    class late_start
+    oneshot
+
+service hciattach /system/bin/sh /system/etc/init.qcom.bt.sh
+    user bluetooth
+    group bluetooth net_bt_admin
+    disabled
+    oneshot
+
+service hostapd /system/bin/hostapd -dddd /data/hostapd/hostapd.conf
+    class late_start
+    user root
+    group root
+    oneshot
+    disabled
+
 service wpa_supplicant /system/bin/logwrapper /system/bin/wpa_supplicant \
     -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf \
     -e/data/misc/wifi/entropy.bin
-    #   we will start as root and wpa_supplicant will switch to user wifi
-    #   after setting up the capabilities required for WEXT
-    #   user wifi
-    #   group wifi inet keystore
+#   we will start as root and wpa_supplicant will switch to user wifi
+#   after setting up the capabilities required for WEXT
+#   user wifi
+#   group wifi inet keystore
     class main
     socket wpa_wlan0 dgram 660 wifi wifi
     disabled
     oneshot
 
-service dhcpcd_wlan0 /system/bin/dhcpcd -aABDKL
+service p2p_supplicant /system/bin/logwrapper /system/bin/wpa_supplicant \
+    -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf -N \
+    -ip2p0 -Dnl80211 -c /data/misc/wifi/p2p_supplicant.conf \
+    -e/data/misc/wifi/entropy.bin -puse_p2p_group_interface=1
+#   we will start as root and wpa_supplicant will switch to user wifi
+#   after setting up the capabilities required for WEXT
+#   user wifi
+#   group wifi inet keystore
+    class main
+    socket wpa_wlan0 dgram 660 wifi wifi
+    disabled
+    oneshot
+
+service dhcpcd_wlan0 /system/bin/dhcpcd -aABKL
     class main
     disabled
     oneshot
 
 service dhcpcd_p2p /system/bin/dhcpcd -aABKL
+    class main
+    disabled
+    oneshot
+
+service dhcpcd_bnep0 /system/bin/dhcpcd -ABKL
     class main
     disabled
     oneshot
@@ -161,41 +194,25 @@ service iprenew_p2p /system/bin/dhcpcd -n
     disabled
     oneshot
 
-service dhcpcd_bnep0 /system/bin/dhcpcd -BKLG
-    class main
-    disabled
-    oneshot
-
 service iprenew_bnep0 /system/bin/dhcpcd -n
     class main
     disabled
     oneshot
 
-on property:init.svc.wpa_supplicant=stopped
-    stop dhcpcd
+service ril-daemon1 /system/bin/rild -c 1
+     class main
+     socket rild1 stream 660 root radio
+     socket rild-debug1 stream 660 radio system
+     user root
+     group radio cache inet misc audio sdcard_r sdcard_rw qcom_diag log qcom_oncrpc
 
-service hostapd /system/bin/hostapd -dddd /data/hostapd/hostapd.conf
-    class late_start
-    user root
-    group root
-    oneshot
-    disabled
+service secril-daemon /system/bin/sec-ril
+class main
+user root
+group radio cache inet misc audio sdcard_rw diag log
 
-service fm_dl /system/bin/sh /system/etc/init.qcom.fm.sh
-    class main
-    user root
-    group system qcom_oncrpc
-    disabled
-    oneshot
-
-service get_macaddrs /system/bin/get_macaddrs
-    class main
-    user root
-    oneshot
-    disabled
-
-on property:init.svc.ril-daemon=running
-    start get_macaddrs
-
+# SISO-ANDR-PERF :: START Changing governor to interactive and scheduler to cfq after boot complete
 on property:sys.boot_completed=1
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor        ondemand
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor	ondemand
+    write /sys/block/mmcblk0/queue/scheduler cfq
+# SISO-ANDR-PERF :: END HERE
