--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -5,22 +5,16 @@ on early-init
 
 on init
     # See storage config details at http://source.android.com/tech/storage/
-    mkdir /mnt/shell/emulated 0700 shell shell
-    mkdir /storage/emulated 0555 root root
-
-    export EXTERNAL_STORAGE /storage/emulated/legacy
-    export EMULATED_STORAGE_SOURCE /mnt/shell/emulated
-    export EMULATED_STORAGE_TARGET /storage/emulated
+    mkdir /storage 0555 root root
+    mkdir /storage/primary 0555 root root
+    mkdir /storage/primary/legacy 0555 root root
+    export EXTERNAL_STORAGE /storage/primary/legacy
 
     # Support legacy paths
-    symlink /storage/emulated/legacy /sdcard
-    symlink /storage/emulated/legacy /mnt/sdcard
-    symlink /storage/emulated/legacy /storage/sdcard0
-    symlink /mnt/shell/emulated/0 /storage/emulated/legacy
-
-    export SECONDARY_STORAGE /storage/sdcard1
-    mkdir /storage/sdcard1 0000 system system
-    symlink /storage/sdcard1 /mnt/external_sd
+    symlink /storage/primary/legacy /sdcard
+    symlink /storage/primary/legacy /mnt/sdcard
+    symlink /storage/primary/legacy /storage/sdcard0
+    symlink /mnt/shell/primary/0 /storage/primary/legacy
 
     # create directory for ril data
     mkdir /data/misc/radio 0775 radio radio
