--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -5,21 +5,16 @@ on early-init
 
 on init
     # See storage config details at http://source.android.com/tech/storage/
-    mkdir /storage 0555 root root
-    mkdir /storage/primary 0555 root root
-    mkdir /storage/primary/legacy 0555 root root
-    export EXTERNAL_STORAGE /storage/primary/legacy
+    mkdir /storage 0775 system sdcard_r
+    mkdir /storage/sdcard1 0000 system system
+    mkdir /storage/sdcard0 0000 system system
 
-    # Support legacy paths
-    symlink /storage/primary/legacy /sdcard
-    symlink /storage/primary/legacy /mnt/sdcard
-    symlink /storage/primary/legacy /storage/sdcard0
-    symlink /mnt/shell/primary/0 /storage/primary/legacy
+    export SECONDARY_STORAGE /storage/sdcard1
+    export EXTERNAL_STORAGE /storage/sdcard0
 
-    # create directory for ril data
-    mkdir /data/misc/radio 0775 radio radio
-    chmod 0775 /data/misc/radio
-    mkdir /data/misc/radio/hatp 0775 radio system
+    symlink /storage/sdcard1 /mnt/sdcard
+    symlink /storage/sdcard1 /sdcard
+    symlink /storage/sdcard0 /mnt/internal_sd
 
 on fs
     mkdir /efs 0771 radio system
@@ -87,12 +82,6 @@ service playlpm /system/bin/playlpm
 service lpmkey /system/bin/lpmkey
     class charger
     oneshot
-
-# create virtual SD card at /storage/sdcard0, based on the /data/media directory
-# daemon will drop to user/group system/media_rw after initializing
-# underlying files in /data/media will be created with user and group media_rw (1023)
-service sdcard /system/bin/sdcard /data/media 1023 1023
-    class late_start
 
 service rmt_storage /system/bin/rmt_storage
     class main
