--- a/rootdir/init.qcom.usb.rc
+++ b/rootdir/init.qcom.usb.rc
@@ -35,7 +35,10 @@ on boot
     write /sys/class/android_usb/android0/iManufacturer ${ro.product.manufacturer}
     write /sys/class/android_usb/android0/iProduct ${ro.product.model}
     write /sys/class/android_usb/f_mass_storage/inquiry_string "Samsung"
-
+    
+on charger
+    setprop sys.usb.config charge_only
+    
 on property:sys.usb.config=mtp
     write /sys/class/android_usb/android0/enable 0
     write /sys/class/android_usb/android0/idVendor 04e8
