msm7x27a: work around camera and externald sdcard bug

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -112,6 +112,11 @@ service playlpm /system/bin/playlpm
 service sdcard /system/bin/sdcard -u 1023 -g 1023 -l /data/media /mnt/shell/emulated
     class late_start
 
+# fusewrapped external sdcard daemon running as media_rw (1023)
+service fuse_sdcard1 /system/bin/sdcard -u 1023 -g 1023 -d /mnt/media_rw/sdcard1 /storage/sdcard1
+    class late_start
+    disabled
+
 service lpmkey /system/bin/lpmkey
     class charger
     oneshot
