--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -95,6 +95,169 @@ on boot
     chown system system /sys/class/sec/sec_touchkey/brightness
     chmod 0666 /sys/class/camera/rear/rear_flash
 
+   # Sensors
+#geomagnetic sensor
+    chown system system /sys/class/input/input4/chip_id
+    chown system system /sys/class/input/input4/raw_data
+    chown system system /sys/class/input/input4/op_mode
+    chown system system /sys/class/input/input4/selftest
+    chown system system /sys/class/input/input4/value
+    chown system system /sys/class/input/input4/enable
+    chown system system /sys/class/input/input4/delay
+    chown system system /sys/class/input/input4/rept_xy
+    chown system system /sys/class/input/input4/rept_z  
+    chown system system /sys/class/input/input4/odr
+    chown system system /sys/class/input/input4/layout
+    chown system system /sys/class/input/input4/value_raw
+    
+    chmod 0664 /sys/class/input/input4/layout
+    chmod 0664 /sys/class/input/input4/chip_id
+    chmod 0664 /sys/class/input/input4/raw_data
+    chmod 0664 /sys/class/input/input4/op_mode
+    chmod 0664 /sys/class/input/input4/selftest
+    chmod 0664 /sys/class/input/input4/value
+    chmod 0664 /sys/class/input/input4/value_raw
+        
+    chown system system /sys/class/sensors/magnetic_sensor/chip_id
+    chown system system /sys/class/sensors/magnetic_sensor/raw_data
+    chown system system /sys/class/sensors/magnetic_sensor/op_mode
+    chown system system /sys/class/sensors/magnetic_sensor/selftest
+    chown system system /sys/class/sensors/magnetic_sensor/value
+    chown system system /sys/class/sensors/magnetic_sensor/enable
+    chown system system /sys/class/sensors/magnetic_sensor/delay
+    chown system system /sys/class/sensors/magnetic_sensor/rept_xy
+    chown system system /sys/class/sensors/magnetic_sensor/rept_z  
+    chown system system /sys/class/sensors/magnetic_sensor/odr
+    chown system system /sys/class/sensors/magnetic_sensor/layout
+    chown system system /sys/class/sensors/magnetic_sensor/value_raw
+    
+    chmod 0664 /sys/class/sensors/magnetic_sensor/layout
+    chmod 0664 /sys/class/sensors/magnetic_sensor/chip_id
+    chmod 0664 /sys/class/sensors/magnetic_sensor/raw_data
+    chmod 0664 /sys/class/sensors/magnetic_sensor/op_mode
+    chmod 0664 /sys/class/sensors/magnetic_sensor/selftest
+    chmod 0664 /sys/class/sensors/magnetic_sensor/value
+    chmod 0664 /sys/class/sensors/magnetic_sensor/value_raw
+    
+#acc sensor
+    chown system system /sys/class/input/input3/raw_data
+    chown system system /sys/class/input/input3/value
+    chown system system /sys/class/input/input3/fast_calibration_x
+    chown system system /sys/class/input/input3/fast_calibration_y
+    chown system system /sys/class/input/input3/fast_calibration_z
+    chown system system /sys/class/input/input3/eeprom_writing
+    chown system system /sys/class/input/input3/mode
+    chown system system /sys/class/input/input3/enable
+    chown system system /sys/class/input/input3/offset_filt_x
+    chown system system /sys/class/input/input3/offset_filt_y
+    chown system system /sys/class/input/input3/offset_filt_z
+    chown system system /sys/class/input/input3/selftest
+    chown system system /sys/class/input/input3/delay
+    chown system system /sys/class/input/input3/update
+    chown system system /sys/class/input/input3/range
+    chown system system /sys/class/input/input3/bandwidth
+    chown system system /sys/class/input/input3/layout
+
+    chmod 0664 /sys/class/input/input3/layout
+    chmod 0664 /sys/class/input/input3/raw_data
+    chmod 0664 /sys/class/input/input3/value
+    chmod 0664 /sys/class/input/input3/fast_calibration_x
+    chmod 0664 /sys/class/input/input3/fast_calibration_y
+    chmod 0664 /sys/class/input/input3/fast_calibration_z
+    chmod 0664 /sys/class/input/input3/eeprom_writing
+    chmod 0664 /sys/class/input/input3/enable
+
+    chmod 0664 /sys/devices/virtual/input/input3/calibration
+    chmod 0664 /sys/devices/virtual/input/input3/enable_int 
+    chmod 0664 /sys/devices/virtual/input/input3/fifo_framecount 
+    chmod 0664 /sys/devices/virtual/input/input3/fifo_mode
+    chmod 0664 /sys/devices/virtual/input/input3/fifo_trig_src
+    chmod 0664 /sys/devices/virtual/input/input3/flat_hold_time
+    chmod 0664 /sys/devices/virtual/input/input3/flat_theta 
+    chmod 0664 /sys/devices/virtual/input/input3/high_g_duration 
+    chmod 0664 /sys/devices/virtual/input/input3/high_g_threshold
+    chmod 0664 /sys/devices/virtual/input/input3/low_g_duration
+    chmod 0664 /sys/devices/virtual/input/input3/low_g_threshold 
+    chmod 0664 /sys/devices/virtual/input/input3/offset_x 
+    chmod 0664 /sys/devices/virtual/input/input3/offset_y
+    chmod 0664 /sys/devices/virtual/input/input3/offset_z 
+    chmod 0664 /sys/devices/virtual/input/input3/range
+    chmod 0664 /sys/devices/virtual/input/input3/reactive_alert
+    chmod 0664 /sys/devices/virtual/input/input3/selftest 
+    chmod 0664 /sys/devices/virtual/input/input3/slope_duration
+    chmod 0664 /sys/devices/virtual/input/input3/slope_no_mot_threshold 
+    chmod 0664 /sys/devices/virtual/input/input3/slope_threshold
+    chmod 0664 /sys/devices/virtual/input/input3/softreset 
+    chmod 0664 /sys/devices/virtual/input/input3/tap_quiet
+    chmod 0664 /sys/devices/virtual/input/input3/tap_samp 
+    chmod 0664 /sys/devices/virtual/input/input3/tap_shock
+#acc sensor
+    chown system system /sys/class/sensors/accelerometer_sensor/raw_data
+    chown system system /sys/class/sensors/accelerometer_sensor/value
+    chown system system /sys/class/sensors/accelerometer_sensor/fast_calibration_x
+    chown system system /sys/class/sensors/accelerometer_sensor/fast_calibration_y
+    chown system system /sys/class/sensors/accelerometer_sensor/fast_calibration_z
+    chown system system /sys/class/sensors/accelerometer_sensor/eeprom_writing
+    chown system system /sys/class/sensors/accelerometer_sensor/mode
+    chown system system /sys/class/sensors/accelerometer_sensor/enable
+    chown system system /sys/class/sensors/accelerometer_sensor/offset_filt_x
+    chown system system /sys/class/sensors/accelerometer_sensor/offset_filt_y
+    chown system system /sys/class/sensors/accelerometer_sensor/offset_filt_z
+    chown system system /sys/class/sensors/accelerometer_sensor/selftest
+    chown system system /sys/class/sensors/accelerometer_sensor/delay
+    chown system system /sys/class/sensors/accelerometer_sensor/update
+    chown system system /sys/class/sensors/accelerometer_sensor/range
+    chown system system /sys/class/sensors/accelerometer_sensor/bandwidth
+    chown system system /sys/class/sensors/accelerometer_sensor/reactive_alert
+    chown system system /sys/class/sensors/accelerometer_sensor/calibration
+    chown system system /sys/class/sensors/accelerometer_sensor/layout
+    
+    chmod 0664 /sys/class/sensors/accelerometer_sensor/layout    
+    chmod 0664 /sys/class/sensors/accelerometer_sensor/raw_data
+    chmod 0664 /sys/class/sensors/accelerometer_sensor/value
+    chmod 0664 /sys/class/sensors/accelerometer_sensor/fast_calibration_x
+    chmod 0664 /sys/class/sensors/accelerometer_sensor/fast_calibration_y
+    chmod 0664 /sys/class/sensors/accelerometer_sensor/fast_calibration_z
+    chmod 0664 /sys/class/sensors/accelerometer_sensor/eeprom_writing
+    chmod 0664 /sys/class/sensors/accelerometer_sensor/enable
+    chmod 0664 /sys/class/sensors/accelerometer_sensor/selftest
+    chmod 0664 /sys/class/sensors/accelerometer_sensor/calibration
+    chmod 0664 /sys/class/sensors/accelerometer_sensor/reactive_alert
+    
+    chown system system /efs/calibration_data    
+    chmod 0666 /efs/calibration_data
+
+#proximity sensor
+    chown system system /sys/class/input/input2/enable
+    chmod 0664 /sys/class/input/input2/enable
+
+    chown system system /sys/class/sensors/proximity_sensor/enable
+    chown system system /sys/class/sensors/proximity_sensor/state
+    chown system system /sys/class/sensors/proximity_sensor/name
+    chown system system /sys/class/sensors/proximity_sensor/vendor
+    chown system system /sys/class/sensors/proximity_sensor/prox_cal
+
+    chmod 0664 /sys/class/sensors/proximity_sensor/enable
+    chmod 0664 /sys/class/sensors/proximity_sensor/state
+    chmod 0664 /sys/class/sensors/proximity_sensor/name
+    chmod 0664 /sys/class/sensors/proximity_sensor/vendor
+    chmod 0664 /sys/class/sensors/proximity_sensor/prox_cal
+
+    chown system system /efs/prox_cal    
+    chmod 0666 /efs/prox_cal
+
+service sensord /system/bin/sensord
+	class main
+	user system
+	group system
+#    oneshot
+#    start sensord
+
+# BMC050 compass/accelerometer daemon
+service sensord /system/bin/sensord
+    class main
+    oneshot
+
     # TelephonyManager.java requires this
     chmod 0644 /proc/cmdline
 
@@ -137,12 +300,6 @@ service thermald /system/bin/thermald -c /system/etc/thermald.conf
 
 service mpdecision /system/bin/mpdecision --no_sleep --avg_comp
     class main
-
-service sensord /system/bin/sensord
-    class main
-#   we run sensord as root for convenience
-#   user system
-#   group system
 
 service qcamerasvr /system/bin/mm-qcamera-daemon
     class late_start
