--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -296,13 +296,13 @@ service netmgrd /system/bin/netmgrd
     class main
     group radio
 
-service thermald /system/bin/thermald -c /system/etc/thermald.conf
+service thermal-engine /system/bin/thermald -c /system/etc/thermald.conf
     class main
 
 service mpdecision /system/bin/mpdecision --no_sleep --avg_comp
     class main
 
-service qcamerasvr /system/bin/mm-qcamera-daemon
+service mm-qcamerad /system/bin/mm-qcamera-daemon
     class late_start
     user camera
     group camera system inet audio
